chore: added github copilot chat extension to devcontainer config

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
   "customizations": {
     "vscode": {
       "extensions": [
+        "github.copilot-chat",
         "github.vscode-pull-request-github",
         "nrwl.angular-console"
       ]
