--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -25,7 +25,9 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "clear": "rimraf dist",
-    "clear:all": "rimraf data dist node_modules"
+    "clear:all": "rimraf data dist node_modules",
+    "test": "vitest run",
+    "test:dev": "vitest dev"
   },
   "dependencies": {
     "level": "^8.0.1"
@@ -37,7 +39,8 @@
     "@jhasuraj01/tsup": "workspace:*",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.0"
   },
   "keywords": [],
   "author": {
