--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -26,7 +26,7 @@
     "dev": "tsup --watch",
     "clear": "rimraf dist",
     "clear:all": "rimraf data dist node_modules",
-    "test": "vitest run",
+    "test": "vitest run --coverage",
     "test:dev": "vitest dev"
   },
   "dependencies": {
@@ -37,6 +37,7 @@
     "@jhasuraj01/prettier-config": "workspace:*",
     "@jhasuraj01/tsconfig": "workspace:*",
     "@jhasuraj01/tsup": "workspace:*",
+    "@vitest/coverage-v8": "^1.3.1",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3",
