--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -25,7 +25,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "clear": "rimraf dist",
-    "clear:all": "rimraf data dist node_modules",
+    "clear:all": "rimraf data coverage dist node_modules",
     "test": "vitest run --coverage",
     "test:dev": "vitest dev"
   },
