--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": "./",
     "rootDir": "src",
     "outDir": "dist",
-    "declarationDir": "dist",
+    "declarationDir": "dist"
   },
   "include": [
     "./src/**/*.ts",
