--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "test": "nx affected -t test",
     "test:all": "nx run-many -t test",
     "test:config": "chmod +x test-config.sh && sh test-config.sh",
+    "typecheck:src": "nx affected -t typecheck:src",
+    "typecheck:src:all": "nx run-many -t typecheck:src",
+    "typecheck:test": "nx affected -t typecheck:test",
+    "typecheck:test:all": "nx run-many -t typecheck:test",
     "update:packages": "pnpm update --recursive"
   },
   "keywords": [],
