--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -25,7 +25,8 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "clear": "rimraf dist",
-    "clear:all": "rimraf dist node_modules"
+    "clear:all": "rimraf dist node_modules",
+    "typecheck:src": "tsc -p ./tsconfig.json --noEmit"
   },
   "devDependencies": {
     "@jhasuraj01/eslint-config": "workspace:*",
