--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,12 @@ jobs:
       - name: build
         run: pnpm build
 
+      - name: check source types
+        run: typecheck:src
+
+      - name: check test types
+        run: typecheck:test
+
       - name: lint check
         run: pnpm lint:check
 
