--- a/apps/cli-app/package.json
+++ b/apps/cli-app/package.json
@@ -27,6 +27,8 @@
     "prepack": "pnpm run build && oclif manifest && oclif readme",
     "test": "chmod +x ./bin/dev.js && vitest run",
     "test:dev": "vitest dev",
+    "typecheck:src": "tsc -p ./tsconfig.json --noEmit",
+    "typecheck:test": "tsc -p ./test/tsconfig.json --noEmit",
     "version": "oclif readme && git add README.md"
   },
   "dependencies": {
@@ -34,24 +36,24 @@
     "@jhasuraj01/hello": "workspace:*",
     "@jhasuraj01/speak": "workspace:*",
     "@jhasuraj01/tsconfig": "workspace:*",
-    "@oclif/core": "^3.19.2",
-    "@oclif/plugin-help": "^6.0.13",
-    "@oclif/plugin-plugins": "^4.2.3",
+    "@oclif/core": "^3.19.6",
+    "@oclif/plugin-help": "^6.0.14",
+    "@oclif/plugin-plugins": "^4.2.5",
     "rimraf": "5.0.5"
   },
   "devDependencies": {
     "@jhasuraj01/eslint-config": "workspace:^",
     "@jhasuraj01/prettier-config": "workspace:*",
     "@oclif/prettier-config": "^0.2.1",
-    "@types/node": "^20.11.19",
-    "eslint": "^8.56.0",
-    "eslint-config-oclif": "^5.0.0",
+    "@types/node": "^20.11.20",
+    "eslint": "^8.57.0",
+    "eslint-config-oclif": "^5.0.2",
     "eslint-config-oclif-typescript": "^3.0.48",
     "execa": "^8.0.1",
-    "oclif": "^4.4.15",
+    "oclif": "^4.4.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.3.0"
+    "vitest": "^1.3.1"
   },
   "keywords": [],
   "author": {
