--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -27,7 +27,9 @@
     "clear": "rimraf data coverage dist",
     "clear:all": "rimraf data coverage dist node_modules",
     "test": "vitest run --coverage",
-    "test:dev": "vitest dev"
+    "test:dev": "vitest dev",
+    "typecheck:src": "tsc -p ./tsconfig.json --noEmit",
+    "typecheck:test": "tsc -p ./test/tsconfig.json --noEmit"
   },
   "dependencies": {
     "level": "^8.0.1"
@@ -37,11 +39,12 @@
     "@jhasuraj01/prettier-config": "workspace:*",
     "@jhasuraj01/tsconfig": "workspace:*",
     "@jhasuraj01/tsup": "workspace:*",
+    "@types/node": "^20.11.20",
     "@vitest/coverage-v8": "^1.3.1",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.3.0"
+    "vitest": "^1.3.1"
   },
   "keywords": [],
   "author": {
