--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -28,11 +28,17 @@
     "clear:all": "rimraf dist node_modules",
     "typecheck:src": "tsc -p ./tsconfig.json --noEmit"
   },
+  "dependencies": {
+    "@jhasuraj01/interface": "workspace:*",
+    "unique-names-generator": "^4.7.1",
+    "uuid": "^9.0.1"
+  },
   "devDependencies": {
     "@jhasuraj01/eslint-config": "workspace:*",
     "@jhasuraj01/prettier-config": "workspace:*",
     "@jhasuraj01/tsconfig": "workspace:*",
     "@jhasuraj01/tsup": "workspace:*",
+    "@types/uuid": "^9.0.8",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
