feat: integrated graph functions with cli

--- a/apps/cli-app/package.json
+++ b/apps/cli-app/package.json
@@ -35,8 +35,10 @@
     "@jhasuraj01/composer": "workspace:*",
     "@jhasuraj01/database": "workspace:*",
     "@jhasuraj01/hello": "workspace:*",
+    "@jhasuraj01/interface": "workspace:*",
     "@jhasuraj01/speak": "workspace:*",
     "@jhasuraj01/tsconfig": "workspace:*",
+    "@jhasuraj01/utils": "workspace:*",
     "@oclif/core": "^3.20.0",
     "@oclif/plugin-help": "^6.0.14",
     "@oclif/plugin-plugins": "^4.2.7",
