--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@jhasuraj01/interface": "workspace:*",
+    "type-fest": "^4.10.3",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.1"
   },
