--- a/apps/cli-app/package.json
+++ b/apps/cli-app/package.json
@@ -13,8 +13,8 @@
   "exports": "./dist/index.js",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "clear": "rimraf dist tsconfig.tsbuildinfo",
-    "clear:all": "rimraf dist tsconfig.tsbuildinfo node_modules",
+    "clear": "rimraf data dist tsconfig.tsbuildinfo",
+    "clear:all": "rimraf data dist tsconfig.tsbuildinfo node_modules",
     "build": "rimraf dist && tsc -b",
     "postbuild": "chmod +x ./bin/run.js",
     "dev": "tsc --watch",
@@ -33,24 +33,26 @@
   },
   "dependencies": {
     "@jhasuraj01/composer": "workspace:*",
+    "@jhasuraj01/database": "workspace:*",
     "@jhasuraj01/hello": "workspace:*",
+    "@jhasuraj01/interface": "workspace:*",
     "@jhasuraj01/speak": "workspace:*",
     "@jhasuraj01/tsconfig": "workspace:*",
-    "@oclif/core": "^3.19.6",
-    "@oclif/plugin-help": "^6.0.14",
-    "@oclif/plugin-plugins": "^4.2.5",
+    "@oclif/core": "^3.20.0",
+    "@oclif/plugin-help": "^6.0.15",
+    "@oclif/plugin-plugins": "^4.2.7",
     "rimraf": "5.0.5"
   },
   "devDependencies": {
     "@jhasuraj01/eslint-config": "workspace:^",
     "@jhasuraj01/prettier-config": "workspace:*",
     "@oclif/prettier-config": "^0.2.1",
-    "@types/node": "^20.11.20",
+    "@types/node": "^20.11.24",
     "eslint": "^8.57.0",
-    "eslint-config-oclif": "^5.0.2",
+    "eslint-config-oclif": "^5.0.3",
     "eslint-config-oclif-typescript": "^3.0.48",
     "execa": "^8.0.1",
-    "oclif": "^4.4.18",
+    "oclif": "^4.4.20",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
