--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -18,23 +18,29 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "lint": "eslint ./src/**/* --ext .ts,js --fix",
-    "lint:check": "eslint ./src/**/* --ext .ts,js",
-    "format": "prettier ./src/**/* --write",
-    "format:check": "prettier ./src/**/* --check",
+    "lint": "eslint ./src/**/* ./test/**/* --ext .ts,js --fix",
+    "lint:check": "eslint ./src/**/* ./test/**/* --ext .ts,js",
+    "format": "prettier ./src/**/* ./test/**/* --write",
+    "format:check": "prettier ./src/**/* ./test/**/* --check",
     "build": "tsup",
     "dev": "tsup --watch",
     "clear": "rimraf dist",
-    "clear:all": "rimraf dist node_modules"
+    "clear:all": "rimraf dist node_modules",
+    "test": "vitest run --coverage",
+    "test:dev": "vitest dev",
+    "typecheck:src": "tsc -p ./tsconfig.json --noEmit",
+    "typecheck:test": "tsc -p ./test/tsconfig.json --noEmit"
   },
   "devDependencies": {
     "@jhasuraj01/eslint-config": "workspace:*",
     "@jhasuraj01/prettier-config": "workspace:*",
     "@jhasuraj01/tsconfig": "workspace:*",
     "@jhasuraj01/tsup": "workspace:*",
+    "@vitest/coverage-v8": "^1.3.1",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1"
   },
   "keywords": [],
   "author": {
@@ -51,5 +57,10 @@
   "engineStrict": true,
   "packageManager": "pnpm@8.15.1",
   "prettier": "@jhasuraj01/prettier-config",
-  "nx": {}
+  "nx": {},
+  "dependencies": {
+    "type-fest": "^4.10.3",
+    "zod": "^3.22.4",
+    "zod.discriminatedunion": "^1.0.1"
+  }
 }
