feat: added javacript object serializer and deserializer

--- a/nx.json
+++ b/nx.json
@@ -22,6 +22,14 @@
     },
     "format:check": {
       "cache": true
+    },
+    "typecheck:src": {
+      "cache": true,
+      "dependsOn": ["build"]
+    },
+    "typecheck:test": {
+      "cache": true,
+      "dependsOn": ["build"]
     }
   },
   "affected": {
