--- a/apps/cli-app/package.json
+++ b/apps/cli-app/package.json
@@ -38,6 +38,7 @@
     "@jhasuraj01/interface": "workspace:*",
     "@jhasuraj01/speak": "workspace:*",
     "@jhasuraj01/tsconfig": "workspace:*",
+    "@jhasuraj01/utils": "workspace:^",
     "@oclif/core": "^3.20.0",
     "@oclif/plugin-help": "^6.0.15",
     "@oclif/plugin-plugins": "^4.2.7",
@@ -52,7 +53,7 @@
     "eslint-config-oclif": "^5.0.3",
     "eslint-config-oclif-typescript": "^3.0.48",
     "execa": "^8.0.1",
-    "oclif": "^4.4.20",
+    "oclif": "^4.4.21",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
