chore: integrated with nx cloud

--- a/nx.json
+++ b/nx.json
@@ -34,5 +34,6 @@
   },
   "affected": {
     "defaultBase": "origin/main"
-  }
+  },
+  "nxCloudAccessToken": "OTkxOWY1NjQtNGFkOS00MjFjLTkyNGUtNzZhNjcxYTQyNWM4fHJlYWQ="
 }
