feat: walletconnect working

--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -18,5 +18,7 @@
   },
   "ignorePatterns": [ "node_modules/**", "dist/**", "bin/**", "build/**","**/tsconfig.*" ],
   "noInlineConfig": true,
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off"
+  }
 }
