--- a/packages/walletconnect/package.json
+++ b/packages/walletconnect/package.json
@@ -32,6 +32,7 @@
     "typecheck:test": "tsc -p ./test/tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@jhasuraj01/database": "workspace:*",
     "@types/qrcode": "^1.5.5",
     "@walletconnect/universal-provider": "^2.11.3",
     "qrcode": "^1.5.3"
