--- a/apps/cli-app/package.json
+++ b/apps/cli-app/package.json
@@ -40,24 +40,25 @@
     "@jhasuraj01/tsconfig": "workspace:*",
     "@jhasuraj01/utils": "workspace:*",
     "@jhasuraj01/walletconnect": "workspace:^",
-    "@oclif/core": "^3.23.0",
-    "@oclif/plugin-help": "^6.0.16",
-    "@oclif/plugin-plugins": "^4.3.1",
-    "rimraf": "5.0.5"
+    "@oclif/core": "^3.26.0",
+    "@oclif/plugin-help": "^6.0.19",
+    "@oclif/plugin-plugins": "^4.3.9",
+    "rimraf": "5.0.5",
+    "web3": "^4.6.0"
   },
   "devDependencies": {
     "@jhasuraj01/eslint-config": "workspace:*",
     "@jhasuraj01/prettier-config": "workspace:*",
     "@oclif/prettier-config": "^0.2.1",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.11.30",
     "eslint": "^8.57.0",
-    "eslint-config-oclif": "^5.0.4",
-    "eslint-config-oclif-typescript": "^3.0.48",
+    "eslint-config-oclif": "^5.1.1",
+    "eslint-config-oclif-typescript": "^3.1.3",
     "execa": "^8.0.1",
-    "oclif": "^4.5.0",
+    "oclif": "^4.6.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2",
-    "vitest": "^1.3.1"
+    "typescript": "^5.4.3",
+    "vitest": "^1.4.0"
   },
   "keywords": [],
   "author": {
