--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,13 @@
         "nrwl.angular-console"
       ]
     }
+  },
+  "features": {
+    "ghcr.io/devcontainers-contrib/features/pnpm": {
+      "version": "8.15.1"
+    },
+    "ghcr.io/devcontainers/features/node": {
+      "version": "20.11.0"
+    }
   }
 }
