chore: added nx to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,9 @@
     },
     "ghcr.io/devcontainers/features/node": {
       "version": "20.11.0"
+    },
+    "ghcr.io/balazs23/devcontainers-features/nx": {
+      "version": "18.0.4"
     }
   }
 }
