chore: updated nx config

--- a/nx.json
+++ b/nx.json
@@ -32,8 +32,6 @@
       "dependsOn": ["build"]
     }
   },
-  "affected": {
-    "defaultBase": "origin/main"
-  },
+  "defaultBase": "origin/main",
   "nxCloudAccessToken": "OTkxOWY1NjQtNGFkOS00MjFjLTkyNGUtNzZhNjcxYTQyNWM4fHJlYWQ="
 }
