--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ on:
       - ready_for_review
 
 env:
-  # NX_BASE: origin/${{github.base_ref}}
+  NX_BASE: origin/${{github.base_ref}}
   # NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
 
 jobs:
