--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -3,14 +3,18 @@
   "name": "@jhasuraj01/parser",
   "version": "0.0.0",
   "description": "composerer composers composeech",
+  "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "build": "hardhat compile",
     "lint": "eslint ./scripts/**/* --ext .ts,js --fix",
     "lint:check": "eslint ./scripts/**/* --ext .ts,js",
     "format": "prettier ./scripts/**/* ./test/**/* --write",
     "format:check": "prettier ./scripts/**/* ./test/**/* --check",
-    "clear": "rimraf artifacts cache",
-    "clear:all": "rimraf artifacts cache node_modules"
+    "clear": "rimraf artifacts cache coverage",
+    "clear:all": "rimraf artifacts cache node_modules coverage",
+    "test": "vitest run --coverage",
+    "test:dev": "vitest dev"
   },
 
   "devDependencies": {
@@ -19,10 +23,12 @@
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@vitest/coverage-v8": "^1.4.0",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
     "hardhat": "^2.22.2",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "vitest": "^1.4.0"
   },
   
   "dependencies": {
