--- a/packages/prettier-config/.prettierrc.json
+++ b/packages/prettier-config/.prettierrc.json
@@ -3,5 +3,13 @@
   "trailingComma": "none",
   "tabWidth": 2,
   "semi": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "overrides": [
+    {
+      "files": "**/*.sol",
+      "options": {
+        "singleQuote": false
+      }
+    }
+  ]
 }
