--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -19,6 +19,7 @@
   "ignorePatterns": [ "node_modules/**", "dist/**", "bin/**", "build/**","**/tsconfig.*" ],
   "noInlineConfig": true,
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "perfectionist/sort-objects": "off"
   }
 }
