--- a/packages/prettier-config/.prettierrc.json
+++ b/packages/prettier-config/.prettierrc.json
@@ -8,7 +8,10 @@
     {
       "files": "**/*.sol",
       "options": {
-        "singleQuote": false
+        "singleQuote": false,
+        "trailingComma": "none",
+        "tabWidth": 2,
+        "semi": false
       }
     }
   ]
